--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
@@ -9,7 +12,7 @@
 
 
 .App-header {
-  background-color: #282c34;
+  background-color: var(--color-bg);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -17,13 +20,27 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+  position:relative;
+  line-height:1.6em;}
 
 .App-link {
   color: #61dafb;
 }
 
+.Nav-main{
+  position: fixed;
+}
 
 button {
   font-size: calc(10px + 2vmin);
+}
+
+.contenedor{
+  width: 100%;
+  height: 100%;
+  position:relative;
+}
+
+.navegation{
+  position: absolute;
 }
