--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,3 +1,120 @@
 .About h1{
     color:cyan;
 }
+
+.about__container{
+    display: grid;
+    grid-template-columns: 35% 45%;
+   gap: 8%;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 1rem 0 1.7rem;
+}
+
+
+@media screen and (max-width: 1024px){
+    .about__container{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 8%;
+       
+    }
+
+    .about__me {
+          width: 50%;
+         padding: 2rem auto 4rem;
+    }
+
+    .about__contenido .about__info{
+        margin: 1rem 0 1.5rem;
+    }
+    .about__cards .about__card{
+    padding: 1rem;
+    }
+}
+
+.about__me {
+    width: 90%;
+    aspect-radio:1/1;
+    border-radius: 2rem;
+    background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
+    display: grid;
+    place-items: center;
+}
+.about__me .about__me__img img{
+    width: 400px;
+       border-radius: 2rem;
+       overflow: hidden;
+       transform: rotate(10deg);
+       transition: var(--transition);
+
+}
+.about__me .about__me__img img:hover{
+    width: 400px;
+       border-radius: 2rem;
+       overflow: hidden;
+       transform: rotate(0deg);
+
+}
+.about__contenido{
+
+   padding: 1rem 1.7rem;  
+}
+
+.about__cards{
+  display: flex;
+  justify-content: center;
+  gap: 0.9rem;   
+  color: var(--color-light);
+}
+
+.about__cards small{
+     color: var(--color-light);
+}
+
+.about__contenido .btn{
+   text-align: left;
+      border: 2px solid var(--color-bg-variant);
+}
+
+.about__cards .about__card{
+  padding: 2rem;
+  background-color: rgba(240, 36, 120, 0.09);
+  border-radius: 0.4rem;
+  color: #F02478;
+  border: 1px solid transparent;
+  transition: var(--transition);
+}
+
+@media screen and (max-width: 640px){
+
+     .about__cards .about__card{
+    padding: 0.8rem;
+  
+}
+}
+
+
+.about__cards .about__card:hover{
+ 
+  padding: 2rem;
+  background-color: transparent;
+  border-radius: 0.4rem;
+  color: #F02478;
+   border-color: var(--color-light);
+}
+
+
+
+.about__contenido .about__info{
+ text-align: left;
+ padding: 1rem 1rem;
+ color: var(--color-light);
+}
+
+
+.about__contenido .about__btn{
+    display: flex;
+   text-align:left;  
+}
