--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,66 @@
-.Header h1 {
-    color:pink;
+
+
+.btn {
+  cursor:pointer;
+  border: 1px solid var(--color-primary);
+  border-radius:0.4rem;
+  width: max-content;
+  display: inline-block;
+  transition: var(--transition);
+  color: var(--color-primary);
+  padding: 0.75rem 1.2rem;
+  text-transform: capitalize;
+}
+.btn:hover{
+   border: 2px dashed var(--color-primary);
+}
+.btn-primary
+{
+  background: var(--color-primary);
+  color: var(--color-bg);
+}
+
+.scroll-abajo{
+  position:absolute;
+  bottom:0px;
+  right:10px;
+  text-orientation: upright;
+  writing-mode: vertical-lr;
+  font-size:0.4em;
+  text-transform: uppercase;
+}
+
+.redes-sociales{
+  position:absolute;
+  bottom:0px;
+  left:10px;
+  text-orientation: upright;
+  writing-mode: vertical-lr;
+  font-size:0.4em;
+  text-transform: uppercase;
+}
+
+.perfil-img img{
+
+ width: 10rem;
+ left: calc(50% - 11rem);
+ margin-top: 4rem;
+ border-radius: 50%;
+ overflow: hidden;
+ background-image: cover;
+}
+.redes-sociales img{
+    transition: var(--transition);
+    border-radius: 50%;
+    padding: 10px;
+}
+.redes-sociales img:hover{
+  border: 2px dashed var(--color-light);
+  border-radius: 50%;
+  padding: 0.2em;
+
+}
+
+.btn-icono{
+   color: var(--color-bg);
 }
