--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,3 +1,43 @@
 .Nav h1 {
     color:palevioletred;
 }
+
+nav{
+    width: max-content;
+    position: fixed;
+    display:block;
+    padding: 0.3rem 1.7rem;
+    z-index: 2;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 3rem;
+    display: flex;
+    gap: 0.4rem;
+    backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.4);
+    bottom: 2rem;
+   
+}
+
+nav a {
+    background: transparent;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    color: var(--color-light);
+    font-size: 1.1rem;
+}
+
+nav a:hover {
+    background: rgba(0, 0, 0, 0.3);
+}
+
+nav .active {
+    background: var(--color-bg);
+    color: var(--color-white);
+}
+
