--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,120 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
+
+@font-face {
+    font-family: "Dinamit";
+    src: url("./assets/Dinamit Regular.otf");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+    font-family: "Dinamit-light";
+    src: url("./assets/Dinamit Thin.otf");
 }
 
+*{
+  margin:0;
+  padding:0;
+  border:0;
+  outline:0;
+  box-sizing:border-box;
+  list-style:none;
+  text-decoration:none;
+}
+
+:root{
+  --color-bg: #151f38;
+  --color-bg-variant:#2c2c6c;
+  --color-primary: #4db5ff;
+  --color-primary-variant: rgba(77,181,255,0.4);
+  --color-white: #fff;
+  --color-light: rgba(255,255,255,0.6);
+  --container-width-lg:75%;
+  --container-width-md:86%;
+  --container-width-sm:95%;
+  --transition: all 400ms;
+}
+
+a {
+  color: var(--color-primary);
+  padding:5px;
+  margin:10px;
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+a:hover{
+  color:var(--color-white);
+}
+
+@media screen and (max-width: 640px){
+ .name-main{
+   font-family: "Dinamit-light";
+   font-size: 2.4rem;
+   height: max-content;
+   padding-top: 1.2rem;
+  }
+  .container{
+  width: var(--container-width-md);
+  margin: 0 auto;
+ 
+}
+
+}
+
+.container{
+  width: var(--container-width-lg);
+  margin: 0 auto;
+ 
+}
+
+
+@media screen and (max-width: 1024px){
+.container{
+  width: var(--container-width-sm);
+  margin: 0 auto;
+ 
+}
+
+}
+
+::-webkit-scrollbar{
+  display:none;
+}
+ .name-main{
+   font-family: "Dinamit-light";
+   font-size: 3.4rem;
+   height: max-content;
+   padding-top: 1.2rem;
+  }
+
+  body{
+   scroll-behavior:smooth;
+   font-family: 'Montserrat', sans-serif;
+   background-color: var(--color-bg);
+   line-height: 1.8em;
+   position:relative;
+}
+
+
+h1, h2, h3, h4, h5
+{
+  font-weight: 500;
+  font-family: "Dinamit";
+}
+
+h1{
+  font-size: 2.5rem;
+}
+
+section {
+  margin-top: 8rem;
+  height: 100vh;
+}
+
+section > h2, section > h5 {
+  text-align: center;
+  color: var(--color-light);
+}
+
+.text-light{
+ color: var(--color-light);
+}
