--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,6 +14,10 @@
 .btn:hover{
    border: 2px dashed var(--color-primary);
 }
+
+.text-second{
+  color: var(--color-light);
+}
 .btn-primary
 {
   background: var(--color-primary);
@@ -59,6 +63,19 @@
   border-radius: 50%;
   padding: 0.2em;
 
+}
+
+.redes-sociales .icono{
+  transition: var(--transition);
+  border-radius: 50%;
+  padding: 1em;
+  color: aqua;
+  
+}
+.redes-sociales .icono:hover{
+border: 2px dashed var(--texto-pink);
+border-radius: 50%;
+padding: 1.2em;
 }
 
 .btn-icono{
