--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,3 @@
-
-
 .btn {
   cursor:pointer;
   border: 1px solid var(--color-primary);
@@ -11,13 +9,19 @@
   padding: 0.75rem 1.2rem;
   text-transform: capitalize;
 }
+
+header h1{
+  margin: 1rem 1rem 0.5rem 1rem;
+}
+
 .btn:hover{
-   border: 2px dashed var(--color-primary);
+  border: 2px dashed var(--color-primary);
 }
 
 .text-second{
   color: var(--color-light);
 }
+
 .btn-primary
 {
   background: var(--color-primary);
@@ -45,39 +49,40 @@
 }
 
 .perfil-img img{
+  width: 10em;
+  left: calc(50% - 11rem);
+  margin-top: 4rem;
+  border-radius: 50%;
+  overflow: hidden;
+  background-image: cover;
+}
 
- width: 10rem;
- left: calc(50% - 11rem);
- margin-top: 4rem;
- border-radius: 50%;
- overflow: hidden;
- background-image: cover;
-}
 .redes-sociales img{
-    transition: var(--transition);
-    border-radius: 50%;
-    padding: 10px;
+  transition: var(--transition);
+  border-radius: 50%;
+  padding: 10px;
 }
+
 .redes-sociales img:hover{
   border: 2px dashed var(--color-light);
   border-radius: 50%;
-  padding: 0.2em;
-
 }
 
 .redes-sociales .icono{
   transition: var(--transition);
   border-radius: 50%;
-  padding: 1em;
+  padding:7px;
+  font-size: 20px;
+  cursor: pointer;
   color: aqua;
-  
+  border: 1px dashed var(--color-light);
 }
+
 .redes-sociales .icono:hover{
-border: 2px dashed var(--texto-pink);
-border-radius: 50%;
-padding: 1.2em;
+  border: 2px dashed var(--texto-pink);
+  color:  var(--color-white);
 }
 
 .btn-icono{
-   color: var(--color-bg);
+  color: var(--color-bg);
 }
