--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
   --container-width-lg:75%;
   --container-width-md:86%;
   --container-width-sm:95%;
-  --transition: all 400ms;
+  --transition: all 400ms linear;
   --texto-pink:#F02478;
 }
 
@@ -40,7 +40,7 @@ a {
   margin:10px;
   transition: var(--transition);
   cursor: pointer;
-}
+  }
 
 a:hover{
   color:var(--color-white);
@@ -52,12 +52,12 @@ a:hover{
    font-size: 2.4rem;
    height: max-content;
    padding-top: 1.2rem;
-    border: 1px solid purple;
+    
   }
   .container{
   width: var(--container-width-md);
   margin: 0 auto;
-}
+  }
 }
 
 .container{
@@ -77,7 +77,6 @@ a:hover{
    height: max-content;
    padding: 1rem 0 1rem 1rem;
   }
-
 }
 
 ::-webkit-scrollbar{
@@ -89,9 +88,7 @@ body{
    font-family: 'Montserrat', sans-serif;
    background-color: var(--color-bg);
    line-height: 1.8em;
-   position:relative;
-   
-   
+   position:relative;  
 }
 
 h1, h2, h3, h4, h5
@@ -104,10 +101,10 @@ h1{
   font-size: 2.5rem;
 }
 
-section {
+/* section {
   margin-top: 8rem;
   height: 100vh;
-}
+} */
 
 section > h2, section > h5 {
   text-align: center;
@@ -122,6 +119,26 @@ section > h2, section > h5 {
    font-family: "Dinamit-light";
    font-size: 3rem;
    height: max-content;
-   padding: 1rem 0 1rem 1rem;
+   padding: 2rem 2rem 1px 1rem;
    color: var( --texto-pink);
+  transition: var(--transition);
+  position: relative;
   }
+
+
+.name-main::after{
+  content:'';
+  width: 0%;
+  height: 2px;
+  background: #C33764;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #1D2671, #C33764);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #1D2671, #C33764); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  transition: var(--transition);
+  position: absolute;
+  bottom:-7px;
+  left: 15%;
+}
+
+.name-main:hover::after{
+width:65%;
+}
