--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -11,6 +11,7 @@
   align-items: center;
   transition: var(--transition);
 }
+
 .container__experience {
   padding: 7rem 0rem 0rem 0rem;
   justify-content: center;
@@ -79,7 +80,12 @@
   padding: 0rem 0rem 1rem 1rem;
 }
 
+.experience__details h4:hover {
+  color: #7fffd4;
+}
+
 .experience__details h4 {
+  transition: var(--transition);
   padding: 0px;
   margin: 0rem 0rem 0rem 1rem;
 }
