--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -2,6 +2,150 @@
     color:coral;
 }
 
-.container__portfolio{
-    height: 100vh;
+.container__portafolio{
+    gap: 2rem;
+    padding: 7rem 2rem 2rem 2rem;
+}
+
+.body__container--portafolio{
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 6rem 2rem 0rem 0rem;
+    gap: 4rem 2.2rem;
+}
+
+.title__portafolio{
+    width: 100%;
+    padding: 5rem 2rem 2rem 2rem;
+    text-align:center;
+    display: flex;
+    justify-content:center;
+}
+
+.demo__projects{
+    display: flex;
+    gap:2rem;
+    margin: 0rem 2rem 1rem 1rem;
+    cursor: pointer;
+    border: 1px dashed var(--color-light);
+}
+
+.demo__projects:hover{
+    color: var(--color-primary);
+}
+.demo__projects p{
+    font-size: 15px;
+    margin: 0rem 0rem 0rem 0.5rem;
+}
+
+.text__light--card
+{
+    color: var(--color-light);
+}
+
+.body__portafolio--card
+{
+    line-height: 25px;
+    padding: 2rem 0rem 0rem 0rem;
+}
+
+.link__portafolio--card
+{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 2rem 0.8rem 0.3rem;
+    gap: 0.3rem;  
+}
+
+.demo__projects{
+   border: 1px solid var(--color-light);
+   padding: 0rem 2.6rem 2rem;
+   border-radius: 10rem;
+   position: relative;
+   width:max-content;
+}
+
+.demo__projects:hover{
+    border: 1px dashed var(--color-primary);
+    background:var(--color-bg);
+}
+
+.link__github--projects{
+    border: 1px solid var(--color-light);
+    padding: 2rem 0rem 0rem 0rem;
+    border-radius: 10rem;
+    
+}
+
+.icono__plus{
+    position: absolute;
+    font-size: 28px;
+    left: 2px;
+    top: 2px;
+}
+
+.demo__projects p{
+    position: absolute;
+    right: 5px;
+    top: 2px;
+}
+
+.logos__tecnologias{
+    display:grid;
+    grid-template-columns: repeat(5, 10%);
+    justify-content:center;
+    align-items: center;
+    padding: 1rem 0rem 1rem 0rem;
+}
+.logos__tecnologias img{
+    width:30px;
+    height:30px;
+    border: 1px solid var(--color-light);
+    border-radius: 50%;
+  
+   
+}
+
+@media screen and (max-width: 640px)
+{
+    .body__container--portafolio{
+        display:grid;
+        grid-template-columns: 1fr;
+        gap: 4rem 2rem;
+        padding: 5rem 2rem 2rem 2rem;
+    } 
+}
+
+.container__card--portafolio{
+    /* background:var(--color-primary-variant); */
+    background: linear-gradient(
+        45deg,
+        transparent,
+        var(--color-primary-variant),
+        transparent
+      );
+    border-radius: 1rem;
+    
+}
+
+.container__card--portafolio:hover{
+    background:var(--color-bg); 
+    border: 1px dashed var(--color-primary);
+}
+
+.card__img{
+    width:100%;
+    height: 200px;
+    border-radius: 1rem;
+    
+}
+
+@media screen and (max-width: 1024px)
+{
+    .body__container--portafolio{
+        display:grid;
+        grid-template-columns: 1fr;
+        gap: 4rem 2rem;
+        padding: 5rem 2rem 2rem 2rem;
+    }
 }
