--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -23,11 +23,9 @@
 }
 
 .demo__projects{
-    display: flex;
-    gap:2rem;
-    margin: 0rem 2rem 1rem 1rem;
-    cursor: pointer;
-    border: 1px dashed var(--color-light);
+   
+   
+    
 }
 
 .demo__projects:hover{
@@ -35,7 +33,7 @@
 }
 .demo__projects p{
     font-size: 15px;
-    margin: 0rem 0rem 0rem 0.5rem;
+   
 }
 
 .text__light--card
@@ -51,19 +49,18 @@
 
 .link__portafolio--card
 {
-    display:grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 2rem 0.8rem 0.3rem;
-    gap: 0.3rem;  
+  
+    padding: 1.8rem 1rem;
 }
 
-.demo__projects{
+ .demo__projects{
    border: 1px solid var(--color-light);
-   padding: 0rem 2.6rem 2rem;
+   padding: 0rem 3rem 1rem;
+   cursor: pointer;
    border-radius: 10rem;
    position: relative;
    width:max-content;
-}
+} 
 
 .demo__projects:hover{
     border: 1px dashed var(--color-primary);
@@ -72,7 +69,7 @@
 
 .link__github--projects{
     border: 1px solid var(--color-light);
-    padding: 2rem 0rem 0rem 0rem;
+   
     border-radius: 10rem;
     
 }
@@ -87,7 +84,7 @@
 .demo__projects p{
     position: absolute;
     right: 5px;
-    top: 2px;
+    top: 3px;
 }
 
 .logos__tecnologias{
