react 2022 proyects add

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,3 +1,11 @@
 .Contact h1 {
     color:orange;
 }
+
+
+.container__contact
+{
+    padding: 7rem 0rem 0rem 0rem;
+    justify-content: center;
+    align-items: center;
+}
