--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -1,3 +1,10 @@
 .testimonials h1 {
     color:teal;
 }
+
+.container__testimonials
+{
+    padding: 7rem 0rem 0rem 0rem;
+    justify-content: center;
+    align-items: center;
+}
