--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -38,7 +38,7 @@
 .body__portafolio--card
 {
     line-height: 25px;
-    padding: 2rem 0rem 0rem 0rem;
+    padding: 0.5rem 0rem 0rem 0rem;
 }
 
 .body__portafolio--card h4{
@@ -152,8 +152,10 @@
 .card__img{
     width:100%;
     height: 200px;
-    border-radius: 1.5rem;
-   
+  
+    padding: 1rem 1rem 1rem 1rem;
+    border-top-left-radius: 2.5rem;
+    border-top-right-radius: 2.5rem;
     
 }
 
