--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -95,5 +95,10 @@
         margin: 2rem auto 4rem;
      
      }
+
+     .container__card-services .services__list{
+      padding: 0rem 0rem 0rem 0rem;
+  
+   }
      
  }
