--- a/src/index.css
+++ b/src/index.css
@@ -35,11 +35,11 @@
 }
 
 a {
-  color: var(--color-primary);
-  padding:5px;
-  margin:10px;
-  transition: var(--transition);
-  cursor: pointer;
+    color: var(--color-primary);
+    padding:5px;
+    margin:10px;
+    transition: var(--transition);
+    cursor: pointer;
   }
 
 a:hover{
@@ -47,11 +47,12 @@ a:hover{
 }
 
 @media screen and (max-width: 640px){
+  
  .name-main{
    font-family: "Dinamit-light";
    font-size: 2.4rem;
    height: max-content;
-   padding-top: 1.2rem;
+   /* padding-top: 1.2rem; */
     
   }
   .container{
@@ -75,7 +76,7 @@ a:hover{
    font-family: "Dinamit-light";
    font-size: 2.7rem;
    height: max-content;
-   padding: 1rem 0 1rem 1rem;
+   /* padding: 1rem 0 1rem 1rem; */
   }
 }
 
@@ -101,10 +102,7 @@ h1{
   font-size: 2.5rem;
 }
 
-/* section {
-  margin-top: 8rem;
-  height: 100vh;
-} */
+
 
 section > h2, section > h5 {
   text-align: center;
@@ -119,7 +117,7 @@ section > h2, section > h5 {
    font-family: "Dinamit-light";
    font-size: 3rem;
    height: max-content;
-   padding: 2rem 2rem 1px 1rem;
+   padding: 0rem 2rem 1px 1rem;
    color: var( --texto-pink);
   transition: var(--transition);
   position: relative;
