--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -50,8 +50,7 @@
 
 .link__portafolio--card
 {
-  
-    padding: 1.8rem 1rem;
+ padding: 1.8rem 1rem;
 }
 
  .demo__projects{
@@ -70,7 +69,6 @@
 
 .link__github--projects{
     border: 1px solid var(--color-light);
-   
     border-radius: 10rem;
     
 }
@@ -129,34 +127,30 @@
 
 .container__card--portafolio{
     /* background:var(--color-primary-variant); */
-    background: linear-gradient(
+      background: linear-gradient(
         45deg,
         transparent,
         var(--color-primary-variant),
         transparent
       );
-      	box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+      box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
       border-radius: 1.5rem;
     
 }
 
 .container__card--portafolio:hover{
     background:var(--color-bg); 
+    
    
 }
 
-
-.head__portafolio--img{
-    
-}
 .card__img{
+    -webkit-mask-image: linear-gradient(to bottom,purple,purple,transparent);
     width:100%;
     height: 200px;
-  
     padding: 1rem 1rem 1rem 1rem;
     border-top-left-radius: 2.5rem;
-    border-top-right-radius: 2.5rem;
-    
+    border-top-right-radius: 2.5rem; 
 }
 
 @media screen and (max-width: 1024px)
