--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -74,6 +74,7 @@ header h1{
   transition: var(--transition);
   border-radius: 50%;
   padding: 10px;
+  
 }
 
 .redes-sociales img:hover{
@@ -158,6 +159,7 @@ position: relative;
     var(--color-primary-variant),
     transparent
   );
+  -webkit-mask-image: linear-gradient(to bottom,purple,purple,transparent);
   
 }
 
@@ -181,14 +183,14 @@ position: relative;
 .perfil-img .hover-show:active  .circle:nth-child(3) {
   position: absolute;
   background: url(../../assets/tecnologi/js.svg);
-  transform: translateX(210%);
+  transform: translateX(250%);
     background-size: contain;
     background-repeat: no-repeat;
   background-position: center;
 }
 .perfil-img  .hover-show:active .circle:nth-child(4) {
   position: absolute;
-  transform: translateX(150%) translateY(180%);
+  transform: translateX(170%) translateY(180%);
   background: url(../../assets/tecnologi/vuetify.svg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -196,7 +198,7 @@ position: relative;
 }
 .perfil-img .hover-show:active .circle:nth-child(5) {
   position: absolute;
-  transform: translateY(220%);
+  transform: translateX(-30%) translateY(220%);
   background: url(../../assets/tecnologi/sass-1.svg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -204,7 +206,7 @@ position: relative;
 }
 .perfil-img .hover-show:active .circle:nth-child(6) {
   position: absolute;
-  transform: translateX(-180%) translateY(150%);
+  transform: translateX(-210%) translateY(150%);
   background: url(../../assets/tecnologi/GitHub-Logo.wine.svg);
   background-size: contain;
   background-repeat: no-repeat;
