--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -2,10 +2,130 @@
     color:orange;
 }
 
-
 .container__contact
-{
-    padding: 7rem 0rem 0rem 0rem;
-    justify-content: center;
+{ 
+    padding: 7rem 2rem 2rem 2rem;
+}
+
+
+
+.contact__container{
+    display:grid;
+    width: 100%;
+    grid-template-columns: 40% 40%;
+    justify-content:center;
+    padding: 7rem 2rem 2rem 2rem;
+
+}
+
+.contact__opcions{
+    color: var(--color-light);
+    padding: 0rem 2rem 2rem 1rem;
+    justify-content: flex-end;
+    flex-direction: column-reverse;
+    display: flex;
+    
+ 
+}
+
+h5{
+    color: var(--color-light);
+}
+
+.contact__opcions .contact__opction{
+   background-color:#2c2c6c; 
+    padding: 1.5rem 1rem 1rem 1rem;
+    border-radius: 0.5rem;
+    width:50%;
+    margin-left: auto;
+}
+
+.formulario__contact form {
+   
+    padding: 0rem 1rem 1rem 1rem;
+    display: grid;
+    gap: 1rem;
+    font-family: "Dinamit";
+    color: var(--color-light);
+}
+
+.formulario__contact form input{
+    width: 100%;
+    font-family: "Dinamit";
+    padding: 2rem 1rem 2rem 1rem;
+    border: 1px solid #2c2c6c; 
+    background:rgba(240, 36, 120, 0.09);
+    color: var(--color-primary);
+}
+
+.formulario__contact form textarea{
+    font-family: "Dinamit";
+    border: 1px solid #2c2c6c; 
+    padding: 2rem 1rem 1rem 1rem; 
+    background:rgba(240, 36, 120, 0.09);
+    color: var(--color-light);
+    text-transform: lowercase;
+    color: var(--color-primary);
+}
+
+.btn__container--contact{
+    display:flex;
+    justify-content:flex-end;
     align-items: center;
+    text-align: center;
+}
+
+.btn__contact{
+    display: flex;
+    text-align:left;  
+    color: var(--color-primary);
+    padding: 1rem 1rem 1rem 1rem; 
+    border-radius: 0.5rem;
+    background-color:#2c2c6c; 
+    cursor: pointer;
+}
+
+.btn__contact:hover{
+    color: #FFF;
+    border: 1px dashed var(--color-primary);
+}
+
+.contact__opcions > article {
+    margin-bottom: 20px;
+  }
+
+
+@media screen and (max-width: 1024px)
+{
+    .contact__container{
+        display:grid;
+        width: 100%;
+        grid-template-columns: 1fr;
+        justify-content:center;
+        padding: 7rem 2rem 2rem 2rem;
+        
+    
+    }
+
+    .contact__opcions{
+        color: var(--color-light);
+        padding: 0.5rem 0.5rem 2rem 1rem;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        display: inline-flex;
+    }
+
+    .contact__opcions > article {
+        margin: 15px;
+      
+      }
+
+      .contact__opcions .contact__opction{
+        background-color:#2c2c6c; 
+         padding: 1.5rem 1rem 1rem 1rem;
+         border-radius: 0.5rem;
+         width:50%;
+         
+     }
 }
