--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -5,8 +5,12 @@
 .container__contact
 { 
     padding: 7rem 2rem 2rem 2rem;
+   
 }
 
+.contact{
+    padding: 5rem 2rem 2rem 2rem;
+}
 
 
 .contact__container{
@@ -16,6 +20,7 @@
     justify-content:center;
     padding: 7rem 2rem 2rem 2rem;
 
+
 }
 
 .contact__opcions{
@@ -24,6 +29,7 @@
     justify-content: flex-end;
     flex-direction: column-reverse;
     display: flex;
+    
     
  
 }
@@ -103,6 +109,7 @@ h5{
         grid-template-columns: 1fr;
         justify-content:center;
         padding: 2rem 2rem 2rem 2rem;
+        
     }
 
     .contact__opcions{
